# data_visualization

Qudsi_Camera_Project/C++_program/: CMakeLists.txt
Qudsi_Camera_Project/C++_program/include/: holder.h  spa2.h
Qudsi_Camera_Project/C++_program/src/: spa4.cpp
Qudsi_Camera_Project/python_program/: pyinstaller  spa3-1.py  spa3.py  spa4.py  spa4t
Qudsi_Camera_Project/spa4_Mac_EXE/: libaom.3.3.0.dylib  libarchive.13.dylib  libavresample.4.0.0.dylib  libavutil.56.70.100.dylib  libb2.1.dylib  libbrotlicommon.1.0.9.dylib  libbrotlienc.1.0.9.dylib  libcjson.1.7.15.dylib  libfontconfig.1.dylib  libfreetype.6.dylib  libgmp.10.dylib  libgnutls.30.dylib  libhogweed.6.4.dylib  libidn2.0.dylib  libintl.8.dylib  libjpeg.9.dylib  libjxl.0.6.1.dylib  liblzma.5.dylib  libnettle.8.4.dylib  libogg.0.dylib  libvpx.7.dylib  (+14 more)
UsbCamObserver/: UsbCamObserver.sln
spa/: cascade_white.xml  cascade_white2.xml  faces.py  placeholder  spa2.py  spa3or.py  spa4.py
spa4_Mac_EXE/: libavformat.58.76.100.dylib  libbluray.2.dylib  libbrotlidec.1.0.9.dylib  libdav1d.5.dylib  libffi.8.dylib  libgcc_s.2.dylib  libgfortran.5.dylib  libgif.7.2.0.dylib  liblept.5.dylib  liblz4.1.9.3.dylib  libmbedcrypto.3.1.0.dylib  libmp3lame.0.dylib  libopencore-amrnb.0.dylib  libopencore-amrwb.0.dylib  libopenjp2.2.4.0.dylib  libpng16.16.dylib  librav1e.0.5.1.dylib  libsrt.1.4.4.dylib  libswresample.3.9.100.dylib  libswscale.5.9.100.dylib  libtesseract.5.dylib  libtheoraenc.1.dylib  libtiff.5.dylib  libunistring.2.dylib  libvmaf.1.dylib  libvorbisenc.2.dylib  libwebpmux.3.dylib  libx265.199.dylib  libzstd.1.5.2.dylib
(+14 files in other folders)
